# kube-vip-svc-recreate

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: constants.rs  dns.rs  k8s.rs  main.rs  settings.rs
