[package]
name = "kube-vip-svc-recreate"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = "1.0.218"
figment = { version = "0.10.19", features = ["env"] }
humantime-serde = "1.1.1"
hickory-resolver = "0.24.4"
either = { version = "1.15.0", features = ["use_std"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
